src/objects/Milestone__c.object
<CustomObject>
    <description>MilestoneObject</description>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CT_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Mongo Database Unique Id</inlineHelpText>
        <label>CT Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CT_Updated_Date__c</fullName>
        <label>CT Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Notes__c</fullName>
        <label>Email Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RARE_Campaign__c</fullName>
        <label>RARE Campaign</label>
        <referenceTo>RARE_Campaign__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Ruby_Id__c</fullName>
        <externalId>true</externalId>
        <label>Ruby Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated By Campaign Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Timeliness_F__c</fullName>
        <formula>IF (
OR ( 
    Submitted_Date__c -  Due_Date__c &gt; 0,
    today() &gt; Due_Date__c
    ),
    &apos;Late&apos;,
    &apos;On Time&apos;
)</formula>
        <label>Timeliness (F)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeliness__c</fullName>
        <label>Timeliness</label>
        <picklist>
            <picklistValues>
                <fullName>On Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RARE_Campaign__c</columns>
        <columns>Name__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Campaign_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Milestone ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>